--- a/public/upload_test.html
+++ b/public/upload_test.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<form method="post" action="http://mbp2014.local:3000/photos" enctype="multipart/form-data">
+<!--<form method="post" action="http://mbp2014.local:3000/photos" enctype="multipart/form-data">-->
+<form method="post" action="http://localhost:3000/photos" enctype="multipart/form-data">
   画像ファイル<input type="file" name="pic">
   <br>
   <input type="submit" name="botan" value="send">
